# phpface

./: CMakeLists.txt  README.md  demo.cpp  dev_install.sh
dest/: config.ini  face.php  install.sh  phpface
linux_so/: libopencv_imgcodecs.so.3.4.16
